--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.linhndk.rust</groupId>
     <artifactId>rust-aim-supporter</artifactId>
-    <version>1.0.3-release</version>
+    <version>1.0.4-release</version>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.1stleg/jnativehook -->
@@ -40,6 +40,12 @@
             <version>2.1.4</version>
             <type>pom</type>
         </dependency>
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.openpnp/opencv &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.openpnp</groupId>-->
+            <!--<artifactId>opencv</artifactId>-->
+            <!--<version>3.4.2-1</version>-->
+        <!--</dependency>-->
 
     </dependencies>
     <build>
